Konata Dump Tool: replaced getFirst() and getLast() methods with ArrayList access methods